Sorted the alignment issue

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -276,6 +276,7 @@ body,
         margin-left: auto;
         margin-right: 0;
         max-width: unset;
+        padding-left: 0;
       }
       .row {
         display: flex;
